--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <br>
-  <h2 style="text-align: center;">{{title}}</h2>
+  <h2 style="text-align: center;"><b>{{title}}</b></h2>
   <hr>
   <div class="card">
     <div class="card-body">
@@ -10,7 +10,7 @@
 </div>
 
 <footer class="footer">
-  <div class="container">
+  <div align="center" class="container">
     <span>All Rights Reserved 2019 @Anjana</span>
   </div>
 
