--- a/src/app/asset-def/asset-def.component.html
+++ b/src/app/asset-def/asset-def.component.html
@@ -1,85 +1,91 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-  <!-- Links -->
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark bg-dark" >
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a href="create" class="nav-link" routerLinkActive="active">Add Asset</a>
+        <a href="create" class="nav-link active" routerLinkActive="active">Asset Definition</a>
     </li>
-
     <li class="nav-item">
-      <a href="assets" class="nav-link" routerLinkActive="active"> Asset List</a>
-    </li>
-
-
-    <li class="nav-item">
-      <a href="login" class="nav-link" routerLinkActive="active">LogOut</a>
-    </li>
+      <a href="vendor" class="nav-link" routerLinkActive="active">Vendor</a>
+  </li>
+  <li class="nav-item">
+      <a href="assetmaster/:id" class="nav-link" routerLinkActive="active">Asset Master</a>
+  </li>
+  <li class="nav-item">
+    <a href="login" class="nav-link" routerLinkActive="active" (click)="Logout()">Logout</a>
+</li>
 
   </ul>
 </nav>
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark bg-dark" >
+    <ul class="navbar-nav">
+      <li class="nav-item">
+          <a href="create" class="nav-link active" routerLinkActive="active">Add Asset</a>
+      </li>
+      <li class="nav-item">
+        <a href="assets" class="nav-link " routerLinkActive="active">Asset List</a>
+    </li>
+   
+    </ul>
+  </nav>
+
 
 <div class="card">
   <div class="card-body">
     <form [formGroup]="assetForm" novalidate (ngSubmit)="addAsset()">
-      <div class="form-group">
+     
+
+      <div [ngClass]="form-group">
         <label class="col-md-4">Asset Name</label>
-        <input type="text" class="form-control" formControlName="ad_name" #ad_name />
+        <input type="text" class="form-control" 
+          formControlName="ad_name" 
+          #ad_name />
       </div>
-      <div
-        *ngIf="assetForm.controls['ad_name'].invalid && (assetForm.controls['ad_name'].dirty || assetForm.controls['ad_name'].touched)"
-        class="alert alert-danger">
+      
+      <div *ngIf="assetForm.controls['ad_name'].invalid && (assetForm.controls['ad_name'].dirty || assetForm.controls['ad_name'].touched)" class="alert alert-danger">
         <div *ngIf="assetForm.controls['ad_name'].errors.required">
           Asset Name is required.
         </div>
       </div>
-      <div class="form-group">
-        <label class="col-md-4">Asset Type </label>
 
-        <!--<select required #mySelect (change)='onOptionSelected(mySelect.Value)'>
-            <option value="">Choose Asset Type</option>
-            <option *ngFor="let ad_type_id of assettypes | async" value="{{asset.at_id}}"></option>
-          </select>-->
-        <input type="text" class="form-control" formControlName="ad_type_id" #ad_type_id />
+      <br>
 
-        <!--  <textarea class="form-control" rows = 7 cols = "5"
-          formControlName="ad_type_id" 
-          #ad_type_id></textarea>-->
-      </div>
-      <div
-        *ngIf="assetForm.controls['ad_type_id'].invalid && (assetForm.controls['ad_type_id'].dirty || assetForm.controls['ad_type_id'].touched)"
-        class="alert alert-danger">
+
+         <div [ngClass]="form-group">
+          <label class="col-md-4">Asset Type</label>
+
+         <select class="form-control" id="ad_type_id"  name="ad_type_id" formControlName="ad_type_id">
+          <option value="">Choose Asset Type</option>
+          <option *ngFor="let assettype of assettypes | async" ngValue="{{assettype.at_id}}">{{assettype.at_name}}</option>
+        </select> 
+      </div> 
+     
+      <div *ngIf="assetForm.controls['ad_type_id'].invalid && (assetForm.controls['ad_type_id'].dirty || assetForm.controls['ad_type_id'].touched)" class="alert alert-danger">
         <div *ngIf="assetForm.controls['ad_type_id'].errors.required">
           Asset Type is required.
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-md-4">Asset Class</label>
-        <!--<input type="text" class="form-control" 
-            formControlName="ad_class" 
-            #ad_class
-          />-->
+        </div> 
+      </div> 
 
-        <input type="text" class="form-control" formControlName="ad_class" #ad_class />
+<br>
 
-        <!--  <select required #mySelect (change)='onOptionSelected(mySelect.Value)'>
-          <option value="" disabled>Choose Asset Class</option>
-          <option value="HW"> HW </option>
-          <option value="SW"> SW </option>
-
-        </select>-->
-
-      </div>
-      <div
-        *ngIf="assetForm.controls['ad_class'].invalid && (assetForm.controls['ad_class'].dirty || assetForm.controls['ad_class'].touched)"
-        class="alert alert-danger">
+<div [ngClass]="form-group">
+  <label class="col-md-4">Asset Class</label>
+      <select class="form-control" formControlName="ad_class">
+          <option value="">Select Asset Class</option>
+          <option value="HW">Hardware</option>
+          <option value="SW">Software</option>
+        </select>
+      
+      <div *ngIf="assetForm.controls['ad_class'].invalid && (assetForm.controls['ad_class'].dirty || assetForm.controls['ad_class'].touched)" class="alert alert-danger">
         <div *ngIf="assetForm.controls['ad_class'].errors.required">
-          Asset class is required.
+          Asset Class is required.
         </div>
-      </div>
+      </div>   
+    </div>     
 
       <div class="form-group">
-        <button type="submit" class="btn btn-primary" [disabled]="assetForm.pristine || assetForm.invalid">
-          Create Asset
-        </button>
+          <button type="submit" class="btn btn-primary"
+          [disabled]="assetForm.pristine || assetForm.invalid" >
+            Create 
+          </button>
       </div>
     </form>
   </div>
