--- a/src/app/asset-list/asset-list.component.html
+++ b/src/app/asset-list/asset-list.component.html
@@ -1,28 +1,40 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-    <!-- Links -->
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a href="create" class="nav-link" routerLinkActive="active">Add Asset</a>
-        </li>
-
-        <li class="nav-item">
-            <a href="assets" class="nav-link" routerLinkActive="active"> Asset List</a>
-        </li>
-
-
-        <li class="nav-item">
-            <a href="login" class="nav-link" routerLinkActive="active">LogOut</a>
-        </li>
-
-    </ul>
-</nav>
-
-<div style="text-align: center">
-    <b>Welcome {{uname}}</b></div>
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <h2>Asset List</h2>
+<div align="center" class="panel-heading">
+        <h2><b>Asset List</b></h2>
     </div>
+
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark bg-dark" >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a href="create" class="nav-link active" routerLinkActive="active">Asset Definition</a>
+          </li>
+          <li class="nav-item">
+            <a href="vendor" class="nav-link" routerLinkActive="active">Vendor</a>
+        </li>
+        <li class="nav-item">
+            <a href="assetmaster/:id" class="nav-link" routerLinkActive="active">Asset Master</a>
+        </li>
+        <li class="nav-item">
+          <a href="login" class="nav-link" routerLinkActive="active" (click)="Logout()" >Logout</a>
+      </li>
+      
+        </ul>
+      </nav>
+      <nav class="navbar navbar-expand-sm bg-primary navbar-dark bg-dark" >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="create" class="nav-link" routerLinkActive="active">Add Asset</a>
+            </li>
+            <li class="nav-item">
+              <a href="assets" class="nav-link active" routerLinkActive="active">Asset List</a>
+          </li>
+         
+          </ul>
+        </nav>
+
+<!-- <div style="text-align: center">
+    <b>Welcome {{uname}}</b></div> -->
+<div class="panel panel-primary">
+   
 
     <div class="panel-body">
         <table class="table table-striped">
@@ -36,15 +48,26 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let asset of assets | async | paginate:{itemsPerPage:2,currentPage:p};let i=index">
+                <tr *ngFor="let asset of assets | async | paginate:{itemsPerPage:4,currentPage:p};let i=index">
                     <td>{{asset.ad_id}}</td>
                     <td>{{asset.ad_name}}</td>
-                    <td>{{asset.ad_type_id}}</td>
+                    <td>{{asset.ad_type_name}}</td>
                     <td>{{asset.ad_class}}</td>
 
 
 
-                    <td><button (click)="deleteAsset(asset.ad_id)" class="btn btn-danger">Delete</button>
+                    <td><button class="btn btn-danger" mwlConfirmationPopover
+                        [popoverTitle]="popoverTitle"
+                        [popoverMessage]="popoverMessage"
+                      placement="left"
+                      (confirm)="confirmClicked = true"
+                      (cancel)="cancelClicked = true"
+                      confirmButtonType="warning"
+                      cancelButtonType="default"
+                      (click)="confirmClicked=false;
+                      cancelClicked=false"
+                      [appendToBody]="true"
+                        (confirm)="deleteAsset(asset.ad_id)">Delete</button>
                         <button [routerLink]="['/edit',asset.ad_id]" routerLinkActive="active" class="btn btn-info"
                             style="margin-left: 10px">Update</button>
 
@@ -54,8 +77,8 @@
         </table>
     </div>
     <div class="login">
-        <input name="text-align" placeholder="enter asstname" [(ngModel)]="SearchString"
-            (ngModelChange)="search(SearchString)">
+        <input type="text" placeholder="enter assetname" [(ngModel)]="SearchString"
+            (ngModelChange)="Search(SearchString)">
         <button type="submit" value="Search" (click)="Search(SearchString)" class="btn-info">Search</button>
     </div>
 
