--- a/src/app/master-order-list/master-order-list.component.html
+++ b/src/app/master-order-list/master-order-list.component.html
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark bg-dark">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a href="masterorderlist" class="nav-link active" routerLinkActive="active">OrderStataus</a>
+            <a href="masterorderlist" class="nav-link active" routerLinkActive="active">OrderStatus</a>
         </li>
         <li class="nav-item">
             <a href="masterlist" class="nav-link " routerLinkActive="active">AssetMaster List</a>
